[gd_scene load_steps=9 format=3 uid="uid://bkmlf7qnbjcqd"]

[ext_resource type="Script" path="res://Assets/Port v2/passion_port_4.gd" id="1_0amty"]
[ext_resource type="Texture2D" uid="uid://bsk4ym8d4uxfc" path="res://Assets/Opdelt porte/passionfruit_port_h.png" id="2_kfyrk"]
[ext_resource type="Texture2D" uid="uid://n5ct3dt11sr0" path="res://Assets/Opdelt porte/passionfruit_port_v.png" id="3_7tihp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4u35"]
size = Vector2(65, 20)

[sub_resource type="Animation" id="Animation_k85yu"]
resource_name = "passion_port_open_4"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("passion_h_4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("passion_v_4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="Animation" id="Animation_ptjb4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("passion_h_4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("passion_v_4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_h50fq"]
resource_name = "passion_port_close_4"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("passion_h_4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("passion_v_4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_24qw3"]
_data = {
"RESET": SubResource("Animation_ptjb4"),
"passion_port_close_4": SubResource("Animation_h50fq"),
"passion_port_open_4": SubResource("Animation_k85yu")
}

[node name="passion_port_4" type="StaticBody2D"]
script = ExtResource("1_0amty")

[node name="passion_h_4" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("2_kfyrk")

[node name="passion_v_4" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("3_7tihp")

[node name="passion_port_collision_4" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_s4u35")

[node name="ap_passion_4" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_24qw3")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="close_port"]
